# ebot_test

./: .gitmodules
arm_description/: CMakeLists.txt  package.xml
arm_description/urdf/: arm.xacro  simple_gripper.xacro  test.urdf  (+1 more)
ebot_arm_teleop/: package.xml  setup.cfg  setup.py
ebot_description/: CMakeLists.txt
ebot_description/config/: arm_controllers.yaml  controller.yaml
ebot_description/launch/: bringup.launch.py  debug_control.launch.py  ebot_gazebo.launch.py  ebot_gui.launch.py  view_bot.launch.py
ebot_description/models/arm/: arm_description.xacro
ebot_description/models/ebot/: ebot.gazebo  ebot_description.xacro  ebot_gazebo_control.xacro
ebot_gazebo/: CMakeLists.txt  package.xml
ebot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ebot_moveit_scripts/: package.xml  setup.cfg  setup.py
ebot_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
ebot_movit_config/config/: ebot.ros2_control.xacro  ebot.srdf  ebot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo.yaml
ebot_movit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ebot_movit_config/scripts/: arm_move_action_test.py  arm_teleop_keyboard.py
ebot_serial/: setup.py
ebot_slam/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
robotarm_description/: CMakeLists.txt  package.xml
(+61 files in other folders)
